adds api for password reset link email
