# app.js
@@ -35,7 +35,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 
 app.use('/v1/apidocs', swaggerUi.serve, swaggerUi.setup(swaggerDocumentV1, options));
 
-app.use(jwt({ secret: constant.JWT.SECRET}).unless({path: ['/', '/check_database_crud_connection', { url : '/login', methods : ['POST']}, { url : '/login/logout', methods : ['POST']}, { url : '/notifications', methods : ['POST']}]}));
+app.use(jwt({ secret: constant.JWT.SECRET}).unless({path: ['/', '/check_database_crud_connection', { url : '/forgot_password', methods : ['PUT']}, { url : '/login', methods : ['POST']}, { url : '/login/logout', methods : ['POST']}, { url : '/notifications', methods : ['POST']}]}));
 
 app.all('*', indexRouter, authorizationRouter, domainRouter, userRouter, notificationRouter, planRouter, subscriptionRouter);
 
